--- a/insights/index.html
+++ b/insights/index.html
@@ -314,13 +314,13 @@
             <section class="article-section">
                 <div class="article-grid">
                     <article class="article-card">
-                        <div class="article-badge">🌱 原理解析</div>
-                        <h3>写-念-听：自我对话为什么能欺骗你的大脑</h3>
-                        <p>结合预测编码理论，拆解“写下来 → 念出来 → 听回去”如何重置奖励预期，这是我戒掉直播的关键步骤。</p>
-                        <p class="article-meta">预计发布时间：2025-01-05</p>
+                        <div class="article-badge">🔥 戒烟专题</div>
+                        <h3>为什么戒烟总失败？真正的敌人是触发器</h3>
+                        <p>触发器、意志力电量、复发循环与无痛戒烟三步走——把戒烟失败的挫败感，转化成可重复的练习路径。</p>
+                        <p class="article-meta">更新日期：2024-12-27 · 阅读需 6 分钟</p>
                         <div class="article-actions">
-                            <a class="primary-link" href="#" onclick="return false;">即将发布</a>
-                            <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=想提前阅读写念听文章">提前索取草稿</a>
+                            <a class="primary-link" href="/insights/quit-smoking-triggers.html">立即阅读</a>
+                            <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=分享我的戒烟触发器&body=我最近的触发场景是...">分享你的触发器</a>
                         </div>
                     </article>
                     <article class="article-card">
@@ -368,13 +368,13 @@
             <section class="article-section">
                 <div class="article-grid">
                     <article class="article-card">
-                        <div class="article-badge">🌱 Theory</div>
-                        <h3>Write · Speak · Listen: Why self-talk can fool your brain</h3>
-                        <p>An accessible look at predictive coding and why the “write → speak → listen” loop reshapes reward expectations. This is how I unplugged from endless streams.</p>
-                        <p class="article-meta">Scheduled for: 2025-01-05</p>
+                        <div class="article-badge">🔥 Quit Guide</div>
+                        <h3>Why your quit attempts fail (and how to stop the triggers)</h3>
+                        <p>Break down the real enemy—triggers—learn why willpower drains, what relapse actually means, and follow a three-step, low-friction routine to move forward.</p>
+                        <p class="article-meta">Published: 2024-12-27 · 6 min read</p>
                         <div class="article-actions">
-                            <a class="primary-link" href="#" onclick="return false;">Coming soon</a>
-                            <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=Requesting write-speak-listen draft">Request draft</a>
+                            <a class="primary-link" href="/insights/quit-smoking-triggers.html?lang=en">Read the article</a>
+                            <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=My smoking triggers&body=Here are the moments that trip me up...">Tell me your triggers</a>
                         </div>
                     </article>
                     <article class="article-card">
