Emphasize aloud practice and adjust article schedule

--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
                     <div class="quick-card">
                         <div class="quick-icon">🎙</div>
                         <h3>练习自己的声音</h3>
-                        <p>按照写-念-听三步骤，每天录音 90 秒，训练预测回路。</p>
+                        <p>按照写-念-听三步骤，每天录音 90 秒，必须出声朗读来训练预测回路。</p>
                         <a href="#practice">练习指南</a>
                     </div>
                     <div class="quick-card">
@@ -1650,8 +1650,9 @@
                     <div class="practice-card">
                         <h3>2. 念出来</h3>
                         <ul>
-                            <li>使用手机录音或任何语音工具，念出刚写好的内容。</li>
+                            <li>使用手机录音或任何语音工具，大声念出刚写好的内容。</li>
                             <li>声音不要太快，像对朋友交代事情一样自然。</li>
+                            <li>一定要出声朗读，朗读会同时调动眼睛、嘴巴和耳朵，默读只有眼睛，效果会差很多。</li>
                         </ul>
                     </div>
                     <div class="practice-card">
@@ -1958,7 +1959,7 @@
                     <div class="quick-card">
                         <div class="quick-icon">🎙</div>
                         <h3>Practice your voice</h3>
-                        <p>Follow the write-speak-listen loop and spend 90 seconds recording daily.</p>
+                        <p>Follow the write-speak-listen loop and spend 90 seconds recording aloud every day.</p>
                         <a href="#practice-en">Practice guide</a>
                     </div>
                     <div class="quick-card">
@@ -2065,6 +2066,7 @@
                         <ul>
                             <li>Use your phone’s voice memo or any recorder; read the script out loud.</li>
                             <li>Keep the tone natural—as if you’re coaching a close friend.</li>
+                            <li>Always speak out loud—reading aloud engages your eyes, mouth, and ears, whereas silent reading relies only on your eyes.</li>
                         </ul>
                     </div>
                     <div class="practice-card">
