--- a/insights/index.html
+++ b/insights/index.html
@@ -327,7 +327,7 @@
                         <div class="article-badge">🧠 实战案例</div>
                         <h3>阿强的 21 天戒烟日记：从诱因记录到替代行动</h3>
                         <p>完整呈现阿强的每日对话、补救日流程，以及我们如何在复发时调整脚本，让戒断反应保持在可管理范围内。</p>
-                        <p class="article-meta">预计发布时间：2025-01-12</p>
+                        <p class="article-meta">预计发布时间：2025-10</p>
                         <div class="article-actions">
                             <a class="primary-link" href="#" onclick="return false;">即将发布</a>
                             <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=想加入戒烟日记预览">加入内测名单</a>
@@ -337,7 +337,7 @@
                         <div class="article-badge">📝 工具模板</div>
                         <h3>下载：21 天自我对话脚本 · 打印与 Notion 模板</h3>
                         <p>提供中英文的可打印卡片与 Notion 模板，帮助你在纸本、电脑、手机之间无缝切换练习。</p>
-                        <p class="article-meta">预计发布时间：2025-01-20</p>
+                        <p class="article-meta">预计发布时间：2025-10</p>
                         <div class="article-actions">
                             <a class="primary-link" href="#" onclick="return false;">即将发布</a>
                             <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=想获取模板">加入等待名单</a>
@@ -381,7 +381,7 @@
                         <div class="article-badge">🧠 Field Notes</div>
                         <h3>Qiang’s smoke-free diary: 21 days of self-talk adjustments</h3>
                         <p>Daily highlights from Qiang’s journey—trigger logging, reset days, and the substitutions we used to keep withdrawal manageable.</p>
-                        <p class="article-meta">Scheduled for: 2025-01-12</p>
+                        <p class="article-meta">Scheduled for: 2025-10</p>
                         <div class="article-actions">
                             <a class="primary-link" href="#" onclick="return false;">Coming soon</a>
                             <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=Join smoke-free preview list">Join preview list</a>
@@ -391,7 +391,7 @@
                         <div class="article-badge">📝 Toolkit</div>
                         <h3>Download: 21-day script templates (printable & Notion)</h3>
                         <p>Dual-language templates you can print or duplicate into Notion—ideal for keeping your scripts consistent across devices.</p>
-                        <p class="article-meta">Scheduled for: 2025-01-20</p>
+                        <p class="article-meta">Scheduled for: 2025-10</p>
                         <div class="article-actions">
                             <a class="primary-link" href="#" onclick="return false;">Coming soon</a>
                             <a class="muted-link" href="mailto:selftalkernow@outlook.com?subject=Template waiting list">Join waiting list</a>
