--- a/start/index.html
+++ b/start/index.html
@@ -1278,7 +1278,7 @@
                     <div class="plan-recorder is-disabled" data-recorder-locale="zh">
                         <div class="plan-recorder-header">
                             <h3>语音练习区</h3>
-                            <p>生成计划后，立刻练习念出核心语句。所有音频仅保留在你的装置中。</p>
+                            <p>生成计划后，立刻大声念出核心语句；一定要出声朗读才能同时调动眼、口、耳，默读的效果会差很多。所有音频仅保留在你的装置中。</p>
                         </div>
                         <div class="plan-recorder-controls">
                             <button type="button" class="cta-button" data-recorder-start>开始录音</button>
@@ -1514,7 +1514,7 @@
                     <div class="plan-recorder is-disabled" data-recorder-locale="en">
                         <div class="plan-recorder-header">
                             <h3>Voice rehearsal zone</h3>
-                            <p>Once your plan loads, rehearse the key sentences out loud. The audio stays on your device only.</p>
+                            <p>Once your plan loads, rehearse the key sentences out loud—speaking aloud engages eyes, mouth, and ears, while silent reading only taps your eyes. The audio stays on your device only.</p>
                         </div>
                         <div class="plan-recorder-controls">
                             <button type="button" class="cta-button" data-recorder-start>Start recording</button>
